# fast-auth

./: README.md  pyproject.toml
app/: __init__.py  __main__.py  launcher.py  main.py
app/api/auth/: jwt.py
app/api/v1/: router.py
app/api/v1/handlers/: user.py
app/core/: config.py  security.py
app/models/: user_model.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: user_service.py
